--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -19,6 +19,38 @@ body {
 
 .my_social a img {
   height: 1.5em;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  background: #000;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#end {
+  visibility: hidden;
+}
+
+#demo {
+  width: auto;
+  height: auto;
+  max-height: 90%;
+  max-width: 90%;
+  font-weight: 700;
 }
 
 .containers {
