--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,12 @@ body {
   font-weight: 700;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
